--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/node": "^22.5.5",
     "animate.css": "^4.1.1",
     "axios": "^1.7.4",
     "echarts": "^5.5.1",
