--- a/frontEnd/tsconfig.app.json
+++ b/frontEnd/tsconfig.app.json
@@ -21,5 +21,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/utils/*.js"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/utils/*.js", "src/utils/jigsaw.min.js"]
 }
