--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -32,8 +32,11 @@
     "koa-views": "^6.2.0",
     "koa-websocket": "^7.0.0",
     "koa2-cors": "^2.0.6",
+    "log4js": "^6.9.1",
     "mime-types": "^2.1.35",
     "moment": "^2.30.1",
+    "mysql": "latest",
+    "mysql2": "^3.11.4",
     "node-dependency-injection": "^3.1.2",
     "redis": "^4.7.0",
     "socket.io": "^4.7.5",
